# hydrogen-bot

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.alpine  Dockerfile.debian  Dockerfile.distroless  Dockerfile.distroless-static  README.md  TODO.md  shell.nix
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
.github/workflows/: docker.yml  rust.yml
dev/: README.md  _.env  _application.yml
hydrogen/: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.alpine  Dockerfile.debian  README.md  TODO.md
hydrogen/dev/: README.md  _application.yml
hydrogen/src/: main.rs
hydrogen/src/commands/: join.rs  loop_switch.rs  play.rs  prev.rs  shuffle.rs  skip.rs  time.rs
hydrogen/src/components/: loop_switch.rs  mod.rs  prev.rs  shuffle.rs  skip.rs
hydrogen/src/i18n/: en_us.rs  pt_br.rs
hydrogen/src/music/: lavalink.rs  message.rs  mod.rs  player.rs
hydrogen/src/shared/: pause.rs  prev.rs  shuffle.rs  skip.rs  stop.rs
hydrogen/src/utils/: constants.rs
hydrolink/: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  TODO.md
hydrolink/src/: cluster.rs  hydrogen.rs  lib.rs  model.rs  rest.rs  utils.rs  websocket.rs
src/: handler.rs  main.rs  manager.rs  player.rs  roll.rs
src/commands/: about.rs  join.rs  mod.rs  pause.rs  play.rs  seek.rs  stop.rs
src/components/: loop_switch.rs  mod.rs  pause.rs  prev.rs  shuffle.rs  skip.rs  stop.rs
src/i18n/: en_us.rs  mod.rs  pt_br.rs
src/lavalink/: cluster.rs  hydrogen.rs  mod.rs  model.rs  rest.rs  utils.rs  websocket.rs
src/music/: lavalink.rs  message.rs  mod.rs  player.rs
src/shared/: mod.rs
src/utils/: constants.rs  mod.rs  time_parsers.rs
