[package]
name = "hydrogen"
version = "0.0.1-alpha.14"
authors = ["Nashira Deer <nashiradeer@gmail.com>"]
edition = "2024"
rust-version = "1.85.0"
description = "Discord music bot powered by Lavalink and focusing on performance, features, usability and practicality."
readme = "README.md"
keywords = ["discord", "lavalink", "music"]
publish = false

[features]
default = ["simd-json", "native-tls"]
simd-json = ["serenity/simd_json", "hydrolink/simd-json-beef"]
native-tls = ["serenity/native_tls_backend", "hydrolink/native-tls"]
rustls-tls = ["serenity/rustls_backend", "hydrolink/rustls-tls"]

[dependencies]
dashmap = "6.1.0"
parking_lot = "0.12.3"
regex = "1.11.1"
beef = "0.5.2"
rand = "0.9.0"

[dependencies.dynfmt]
version = "0.1.5"
default-features = false
features = ["curly"]

[dependencies.hydrolink]
path = "../hydrolink"
features = ["parking-lot"]

[dependencies.moka]
version = "0.12.10"
features = ["sync"]

[dependencies.phf]
version = "0.11.2"
features = ["macros"]

[dependencies.serenity]
version = "0.12.2"
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "voice",
]

[dependencies.songbird]
version = "0.5.0"
default-features = false
features = ["gateway", "serenity", "rustls"]

[dependencies.tokio]
version = "1.44.2"
features = ["macros", "rt-multi-thread", "parking_lot"]

[dependencies.tracing]
version = "0.1.37"
features = ["release_max_level_info", "max_level_trace"]

[dependencies.tracing-subscriber]
version = "0.3.17"
features = ["env-filter"]
