[package]
name = "hydrolink"
version = "2.0.0"
authors = ["Nashira Deer <nashiradeer@gmail.com>"]
edition = "2024"
rust-version = "1.85.0"
description = "Hydrolink is a Lavalink client for Discord bots, designed to be fast, efficient and Discord's library independent."
readme = "README.md"
license-file = "LICENSE.txt"
keywords = ["discord", "lavalink", "music", "client"]
publish = true

[features]
simd-json = ["dep:simd-json"]
simd-json-beef = ["simd-json/beef"]
parking-lot = ["dep:parking_lot"]
native-tls = ["tokio-tungstenite/native-tls", "reqwest/native-tls"]
rustls-tls = ["rustls-tls-webpki-roots"]
rustls-tls-native-roots = ["tokio-tungstenite/rustls-tls-native-roots", "reqwest/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["tokio-tungstenite/rustls-tls-webpki-roots", "reqwest/rustls-tls-webpki-roots"]

[dependencies]
bytes = "1.10.0"
futures = "0.3.31"
http = "1.3.1"
regex = "1.11.1"
serde_json = "1.0.136"
url = "2.5.4"

[dependencies.parking_lot]
version = "0.12.3"
optional = true

[dependencies.reqwest]
version = "0.12.12"
default-features = false

[dependencies.serde]
version = "1.0.214"
features = ["derive"]

[dependencies.simd-json]
version = "0.15.1"
optional = true

[dependencies.tokio]
version = "1.44.2"
default-features = false
features = ["net", "macros"]

[dependencies.tokio-tungstenite]
version = "0.26.2"

